--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-facebook": "^5.0.3",
+    "react-image-lightbox": "^5.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-transition": "^1.2.1",
