added homepage to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "salon-artifex",
   "version": "0.1.0",
+  "homepage": "https://42tg.github.io/salon-artifex/",
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
