--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-transition": "^1.2.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "2.1.1",
     "react-transition-group": "^2.4.0"
   },
   "scripts": {
@@ -24,5 +24,11 @@
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
