--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://salonartifex.de",
   "private": true,
   "dependencies": {
+    "@types/cypress": "^1.1.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-facebook": "^6.0.15",
@@ -11,7 +12,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-transition": "^1.2.1",
-    "react-scripts": "2.1.4",
+    "react-scripts": "^3.0.1",
     "react-transition-group": "^2.4.0"
   },
   "scripts": {
@@ -23,7 +24,11 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "@cypress/code-coverage": "^1.8.0",
+    "cypress": "^3.4.1",
+    "gh-pages": "^2.0.1",
+    "istanbul-lib-coverage": "^2.0.5",
+    "nyc": "^14.1.1"
   },
   "browserslist": [
     ">0.2%",
