--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "private": true,
   "dependencies": {
     "@types/cypress": "^1.1.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-facebook": "^6.0.15",
-    "react-image-lightbox": "^5.0.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-router-transition": "^1.2.1",
-    "react-scripts": "^3.0.1",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-facebook": "8.0.4",
+    "react-image-lightbox": "5.1.0",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-router-transition": "2.0.0",
+    "react-scripts": "3.2.0",
     "react-transition-group": "^2.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -24,8 +24,9 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^1.8.0",
-    "cypress": "^3.4.1",
+    "@cypress/code-coverage": "^1.10.1",
+    "@cypress/instrument-cra": "^1.0.0",
+    "cypress": "^3.6.0",
     "gh-pages": "^2.0.1",
     "istanbul-lib-coverage": "^2.0.5",
     "nyc": "^14.1.1"
